package keijumt.design_pattern.pattern.decorate

interface Component {
    fun getName(): String
}