package keijumt.design_pattern.pattern.decorate

abstract class Decorate(private val component: Component) : Component {
}